--- a/domnoo/package.json
+++ b/domnoo/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.6"
+    "velocity-animate": "^1.5.2",
+    "vue": "^2.6.6",
+    "vue-carousel": "^0.18.0-alpha",
+    "vue-material": "^1.0.0-beta-10.2",
+    "vue-scroll-reveal": "^1.0.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
